# zot-kagi-extension

./: LICENSE  README.md  cache.py  extension.json  install.sh  main.py  pyproject.toml
tests/: integration_test.py  test_approval_panel.py  test_cache.py  test_cache_panel.py  test_kagi_extract.py  test_kagi_search.py
